--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<ol>
+		<li data-ns-test="shoppingList">phone</li>
+		<li data-ns-test="shoppingList">laptop</li>
+		<li data-ns-test="shoppingList">tablet</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">abc</li>
+		<li data-ns-test="holidayList">def</li>
+		<li data-ns-test="holidayList">ghi</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
